--- a/cloud-provider-payment8001/src/main/resources/application.yaml
+++ b/cloud-provider-payment8001/src/main/resources/application.yaml
@@ -21,9 +21,9 @@ eureka:
     fetch-registry: true
     service-url:
       #defaultZone: http://localhost:7001/eureka
-      #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #集群版
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka #集群版
       #单机版
-      defaultZone: http://eureka7001.com:7001/eureka
+      #defaultZone: http://eureka7001.com:7001/eureka
   instance:
     instance-id: payment8001 #cloud-payment-service 微服务中的服务实例8001的名称
     prefer-ip-address: true #可以在EurekaServer中显示IP
