--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yaml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yaml
@@ -12,6 +12,8 @@ spring:
       config:
         server-addr: localhost:8848 #Nacos作为配置中心地址
         file-extension: yaml #指定yaml格式的配置
+        group: DEV_GROUP
+        namespace: 29b976e8-d0fe-40e7-a2de-0276ac19bb7c
 
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
