--- a/cloudalibaba-provider-payment9002/src/main/resources/application.yaml
+++ b/cloudalibaba-provider-payment9002/src/main/resources/application.yaml
@@ -7,7 +7,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 192.168.118.100:1111  # 换成nginx的1111端口，做集群
+      #server-addr: localhost:8848
+
 
 #动态刷新配置 , 需暴露端点
 management:
